# praca_dyplomowa_mini_pw_25_26

./: .gitignore  DEPLOYMENT.md  LAB4_TESTING.md  README.md  TESTING_MANUAL.md  TESTING_PLAN.md  USER_MANUAL.md  titlepage-bsc-en.fdb_latexmk  titlepage-bsc-en.fls  titlepage-bsc-en.xdv
DYPLOM/: licencja.txt  readme_en.txt  readme_pl.txt
DYPLOM/1. title_page/: .latexmkrc  strona-tytulowa-inz-pl.tex  strona-tytulowa-lic-pl.tex  strona-tytulowa-mgr-pl.tex  titlepage-bsc-en.fdb_latexmk  titlepage-bsc-en.fls  titlepage-bsc-en.tex  titlepage-bsc-en.xdv  titlepage-msc-en.tex
DYPLOM/2. thesis/: thesis-en.aux  thesis-en.fdb_latexmk  thesis-en.fls  thesis-en.lof  thesis-en.lot  thesis-en.synctex(busy)  thesis-en.tex  thesis-en.toc  thesis-pl.tex
docs/diagrams/: README.md  app_general_flow_sequence.md  automerge_backend_class_diagram.md  automerge_backend_local_intent_sequence.md  automerge_backend_sync_sequence.md  backend_api_class_diagram.md  connectivity_class_diagram.md  connectivity_sync_protocol_sequence.md  drawing_sync_flow_sequence.md  room_event_class_diagram.md  thread_comm_cursor_broadcasting.md  thread_comm_disconnect.md  thread_comm_local_drawing.md  thread_comm_participant_connects.md  thread_comm_participant_disconnects.md  thread_comm_receiving_data.md  ui_class_diagram.md  ui_connection_sequence.md  ui_drawing_sequence.md  ui_drawing_sequence_pl.md  ui_thread_communication_sequence.md  (+1 more)
editor/: .cargo  Cargo.toml  README.md
receiver/: Cargo.toml
sender/: .env.local  .env.lv_cloud  .env.vps  Cargo.toml
sender/src/: main.rs
sender_receiver/: Cargo.toml
(+15 files in other folders)
