[package]
name = "sender"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
eframe = "0.33.0"
rfd = "0.15.4"
egui = "0.33.0"
livekit = "0.7.24"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "sync", "macros"] }
reqwest = { version = "0.12.24", features = ["blocking", "json", "rustls-tls"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = "0.28.0"
tungstenite = "0.28.0"
livekit-api = "0.4.9"
dotenv = "0.15"
env_logger = "0.11.8"
log = "0.4.28"